package com.dekinci.eden.model.animal;

public class AnimalTypes {
    public static final byte WOLF = 0;
    public static final byte HARE = 1;
}
