@startuml

title __ANIMAL's Class Diagram__\n

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        interface Animal {
            {abstract} + getSight()
            {abstract} + getSpecies()
            {abstract} + isVegetarian()
            {abstract} + eats()
            {abstract} + die()
            {abstract} + decHealth()
            {abstract} + getHp()
            {abstract} + alive()
            {abstract} + tick()
            {abstract} + getAge()
            {abstract} + incSatiety()
            {abstract} + getAmountOfBabies()
            {abstract} + makeDecision()
            {abstract} + breed()
            {abstract} + getGenotype()
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        class AnimalTypes {
            {static} + WOLF : byte
            {static} + HARE : byte
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        class Decisions {
            {static} + DECISIONS_AMOUNT : int
            {static} + MOVE_TS : byte
            {static} + MOVE_TR : byte
            {static} + MOVE_RS : byte
            {static} + MOVE_RB : byte
            {static} + MOVE_BS : byte
            {static} + MOVE_BL : byte
            {static} + MOVE_LS : byte
            {static} + MOVE_LT : byte
            {static} + FEED : byte
            {static} + BREED : byte
            {static} + DO_NOTHING : byte
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        class Hare {
            - satiety : int
            - hp : int
            - age : int
            + Hare()
            - Hare()
            + makeDecision()
            + getAge()
            + tick()
            + getAmountOfBabies()
            + getSight()
            + getSpecies()
            + isVegetarian()
            + eats()
            + die()
            + decHealth()
            + getHp()
            + alive()
            + incSatiety()
            + breed()
            + getGenotype()
            + toString()
        }
      }
    }
  }
  

  package com.dekinci.eden {
    package com.dekinci.eden.model {
      package com.dekinci.eden.model.animal {
        class Wolf {
            - satiety : int
            - hp : int
            - age : int
            + Wolf()
            - Wolf()
            + getSpecies()
            + isVegetarian()
            + eats()
            + die()
            + decHealth()
            + getHp()
            + alive()
            + tick()
            + getAge()
            + incSatiety()
            + makeDecision()
            + getGenotype()
            + breed()
            + getAmountOfBabies()
            + getSight()
            + toString()
        }
      }
    }
  }
  

  Hare -up-|> Animal
  Hare o-- Brain : brain
  Wolf -up-|> Animal
  Wolf o-- Brain : brain


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
